objects/VIP_Tons_Points__c.object
<CustomObject>
    <description>Current YTD and Prior YTD VIP Tons and Points by Month.</description>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points_Current_Year__c</fullName>
        <label>Points Current Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Prior_Year__c</fullName>
        <label>Points Prior Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Customer2__c</fullName>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VIP Tons &amp; Points (Ship To Customer)</relationshipLabel>
        <relationshipName>VIP_Tons_Points2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sold_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VIP Tons &amp; Points (Sold To Customer)</relationshipLabel>
        <relationshipName>VIP_Tons_Points1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Species_Group_Name__c</fullName>
        <label>Species Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A H Pack Goods/Forage/F&amp;R</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Bags &amp; Misc</fullName>
                </value>
                <value>
                    <fullName>Commodity Blends</fullName>
                </value>
                <value>
                    <fullName>Companion Animal</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Exotic</fullName>
                </value>
                <value>
                    <fullName>General Ledger</fullName>
                </value>
                <value>
                    <fullName>Grass Cattle</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Macro Ingredients</fullName>
                </value>
                <value>
                    <fullName>Micro Ingredients</fullName>
                </value>
                <value>
                    <fullName>Milk Replacer</fullName>
                </value>
                <value>
                    <fullName>Non Feed Items</fullName>
                </value>
                <value>
                    <fullName>Organic Fertilizer</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tons_Current_Year__c</fullName>
        <label>Tons Current Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tons_Prior_Year__c</fullName>
        <label>Tons Prior Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>VIP Tons &amp; Points</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VIP-{000000}</displayFormat>
        <label>VIP Tons/Points ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Tons &amp; Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>